@startuml

' !theme monokai_npp from ..\..\.styles
scale 2

class BancAccount << адресат >> {
    +{static}overdraft_limit: <i>dec</i>
    +balance: <i>dec</i>
    -_command_requirement() → <i>function</i>
    +deposit() → <i>None</i>
    +withdraw() → <i>bool</i>
}

abstract Command << команда >> {
    +{abstract}execute() → <i>None</i>
    +{abstract}undo() → <i>None</i>
}

class BAGeneral << команда >> {
    +account: BancAccount
    +operation: Operation
    +amount: <i>dec</i>
    +success: <i>bool</i>
    #log() → <i>None</i>
    +execute() → <i>None</i>
    +undo() → <i>None</i>
}

class BATransfer << команда >> {
    -from: BancAccount
    -to: BancAccount
    +amount: <i>dec</i>
    +success: <i>bool</i>
    +execute() → <i>None</i>
    +undo() → <i>None</i>
}

enum Operation {
    DEPOSIT
    WITHDRAW
}

class Logger {
    +{static}default_log_path
    +{static}append_log()
}

hide abstract empty members
hide enum empty members

Command <|-- BAGeneral
Command <|-- BATransfer

Command o-left- BancAccount
Command *-right- Operation

BAGeneral .left.> Logger

@enduml
